# from-rpa-to-agents

./: AGENT.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: HOMEBREW.md
src/from_rpa_to_agents/: __init__.py  cli.py  core.py
tests/: test_core.py
